# picodht

./: CMakeLists.txt  dht.c  dht.h  dht.pio
